--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="http://students.cpcc.edu/~tpham019/web215/styles/default.css">
-	<title>My introduce</title>
+	<title>My course page</title>
 </head>
 <body>
-	<h1>welcome to wed-210</h1>
+	<h1>Welcome to WEB-210</h1>
 </body>
 </html>
